--- a/Changes
+++ b/Changes
@@ -2,6 +2,9 @@ Revision history for Perl extension Dwarf
 
 {{$NEXT}}
 
+1.05  2013-11-20
+    - update updated_at column when Teng::Row::update() called
+
 1.04  2013-11-19
     - Add a plugin for Log::Dispatch::Rotate
 
