--- a/Changes
+++ b/Changes
@@ -2,6 +2,9 @@ Revision history for Perl extension dwarf
 
 {{$NEXT}}
 
+1.12 2014-04-16
+    - change default Content-Type on APIBase if URL is end with xml
+    
 1.11 2014-04-16
 	- impl some FILTERs for Dwarf::Validator
 
