--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ Revision history for Perl extension dwarf
 
 {{$NEXT}}
 
+1.18 2014-11-06
+    - update run.cgi for SpeedyCGI
+    - move a directory of sql into app directory
+
 1.17 2014-07-09
     - impl base_row_class option on App::DB::Schema::Dumper
 
