--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for Perl extension dwarf
 
 {{$NEXT}}
 
+    - fix a problem that dist_dir will die when this module hasn't installed yet. (kuriyama++)
+
 1.28 2015-08-26T13:26:46Z
 
     - add carton support
