--- a/Changes
+++ b/Changes
@@ -1,6 +1,13 @@
 Revision history for Perl extension dwarf
 
 {{$NEXT}}
+    
+    - reimpl proctitle as plugin
+    - support docker
+    - allow json canonical
+    - fix run.cgi env sourcing
+    - use local path on generate.pl
+    - impl validate_json_body method on APIBase
 
 1.50 2017-06-21T07:04:49Z
 
